dataset1235/2025-2/2868285114/users/2053306537/executions/4269873056_2935826613.log
== SUBMISSION (2025-08-26 22:58:59)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(f"{fahrenheit:.2f)")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:.2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:.2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:.2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:.2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:.2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:.2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:58:08)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(f"{fahrenheit:,2)}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:58:48)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(f"{fahrenheit:,2f)")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:57:51)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(f"{fahrenheit,2)}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:58:06)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(f"{fahrenheit:,2)}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2)}
          ^
SyntaxError: unterminated string literal (detected at line 3)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:59:00)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(f"{fahrenheit:.2f)")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:.2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:.2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:.2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:.2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:.2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:.2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:58:47)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(f"{fahrenheit:,2f)")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:58:49)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(f"{fahrenheit:,2f)")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:57:18)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(fahrenheit,2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0 2
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
---- user output:
428.18 2
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
---- user output:
105.26 2
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
---- user output:
50.36 2
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
---- user output:
54.32 2
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
---- user output:
104.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:58:51)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(f"{fahrenheit:,2f)")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(f"{fahrenheit:,2f)")
                             ^
SyntaxError: f-string: expecting '}'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:56:46)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
